# OpenCLSample

MatrixMulti/: CMakeLists.txt  main.cpp  normal.cpp  sorted.cpp
MatrixMultiCalc/: CMakeLists.txt  main.cpp  matrixcalc.cpp  matrixcalc.h
OpenCLMatrixCalc/: CMakeLists.txt  KernelMatrixCalc.cl  KernelMatrixCalc.cl.bak  OpenCLMemo.txt  info.cpp  info.h  main.cpp  matrixcalc.cpp  matrixcalc.h
OpenCLSample/: CMakeLists.txt  main.cpp  opencl_0.cpp  opencl_0.h  opencl_1.cpp  opencl_1.h  opencl_2.cpp  opencl_2.h
OpenCLTest/: CLSample.cpp  CLSample.h  CMakeLists.txt  Const.h  LinearSample.cpp  LinearSample.h  main.cpp
OpenMPTest/: CMakeLists.txt  main.cpp  memo.txt  normal.cpp  normal.h  sorted.cpp  sorted.h
